--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Ejercicio basico angular</h1>
+<!-- <h1>Ejercicio basico angular</h1>
 <hr>
 
 <app-counter></app-counter>
@@ -8,4 +8,8 @@
 <hr>
 
 <app-heroes-list></app-heroes-list>
+<hr> -->
+
+
+<app-main-dbz></app-main-dbz>
 <hr>
